# retro

./: .gitignore  AGENTS.md  LICENSE  README.md  entities.json  mempalace.yaml  pyproject.toml
.claude-plugin/: AGENTS.md  marketplace.json  plugin.json
commands/: AGENTS.md  error.md  review.md  success.md
hooks/: hooks.json  run-hook.cmd  session-reminder.sh
retro/: db.py  mcp_server.py
scripts/: db.py
skills/agentic-interview/: SKILL.md
tests/: CLAUDE.md  conftest.py  test_agent_column.py  test_db.py  test_mcp_tools.py  test_shim.py
