[project]
name = "retro"
version = "0.2.0"
description = "Agent-agnostic retro logging with MCP server"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.scripts]
retro-mcp = "retro.mcp_server:main"

[tool.setuptools.packages.find]
include = ["retro*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E731", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.0",
]
